[B]0.9.12[/B]
LEIA - Fix for scrollbars
LEIA - DialogAddonSettings
LEIA - Change fanart to Leia version
Watched Indicators update
Rearrange skin settings
Add support for Artwork Beef
Add download all option

[B]0.9.11[/B]
Add support for AEL metadata
Show seekjump position
Hide content for plotoverlay
Skin Settings > Miscellaneous > Enable / disable ratings
Switch indicators to white for focused

[B]0.9.10[/B]
Hopeful fix for widgets bug
Characterart plus Awards on info
Add slideshow ability in videoinfo
Use plot outline option

[B]0.9.9[/B]
Add FPS icon and indicator on videoosd info
Add trailer/extras fake fullscreen from info

[B]0.9.8[/B]
Fix NextUp in info bug
Add all views for AEL
Add "Extras" in video info for Extras folder


[B]0.9.7[/B]
Fix resolution flags not showing
Fix some alignment issues in dialogvideoinfo
Rearrange widget groups for Default Widgets to get people using library over skin helper
Add image gallery in videoinfo for extrafanart

[B]0.9.6[/B]
Many optimisations of skin code
Viewmode disabler
Add option to disable text in wall views
Fix flickering widget bug
Show fanart press up from viewmode menu

[B]0.9.5[/B]
Close osd after subs download.
On subs button, download if no subs to switch on.
(re)add fallback to UMS scraped ratings in videoinfo dialog

[B]0.9.4[/B]
Fix parentfolder list position
New osd design
Fix processinfo dialog
Fix clearart on seekbar
Remove unused skin settings
Add back button for mouse compatability mode

[B]0.9.3[/B]
Update widget code to use skinshortcut templates
Update Nextaired
Update NextUp postplay screen.

[B]0.9.2[/B]
Fix focus on re-entering home screen
Fix (hopefully) widget loading

[B]0.9.1[/B]
Add option to hide submenu
Add Arial font
Add Simple and Dark Glass color schemes

[B]0.9.0[/B]
Initial commit