@@ -6,6 +6,7 @@ Watched Indicators update
 Rearrange skin settings
 Add support for Artwork Beef
 Add download all option
+Add nextaired details
 
 [B]0.9.11[/B]
 Add support for AEL metadata
